--- a/style.css
+++ b/style.css
@@ -2,6 +2,33 @@ i{
     padding: 1vh;
 }
 
+header{
+    background-color: #0D6EFD;
+}
+
+.redes a{
+    text-decoration: none;
+}
+
+#myBtn { /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #0D6EFD; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+    background-color: #0B5ED7; /* Add a dark-grey background on hover */
+  }
+
 section{
     padding: 1em;
 }
@@ -12,23 +39,20 @@ section{
     background-position: 0;
     padding-top: 200px;
     padding-bottom: 150px;
+    color: #fff;
 }
 
 #Hero h1{
-    padding-bottom: 50px;
+    padding-bottom: 10px;
+}
+
+#Hero p{
+    padding-bottom: 40px;
 }
 
 #sobrecontent {
     display: flex;
     flex-direction: row;
-}
-
-.imagemTipoUm {
-
-}
-
-.imagemTipoUm img{
-
 }
 
 .Bloco{
@@ -43,15 +67,4 @@ section{
 h2 {
     padding-top: 1em;
     padding-bottom: 1em;
-}
-
-#AllGames{
-    overflow: auto;
-    height: 40vh;
-}
-
-#HowPutHD{
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
 }
